--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeLegend">
-        <activity android:name=".Home"></activity>
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity android:name=".ItemDetail"></activity>
+        <activity android:name=".FindUs" />
+        <activity android:name=".Item" />
+        <activity android:name=".Home" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
