--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeLegend">
-        <activity android:name=".ItemDetail"></activity>
+        <activity android:name=".ItemDetail" />
         <activity android:name=".FindUs" />
         <activity android:name=".Item" />
         <activity android:name=".Home" />
